tests/invalid_sem/com/com18.java
class Main {
    static void run() {
        if ( ((2 == 3) && 5) && (2 + 3)) {
            return;
        }
    }
}